k8s/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: front
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
